feat(updated all the emails and phone numbers, and changed th Our Chef on the about page to Chief Chef)

--- a/about.html
+++ b/about.html
@@ -55,7 +55,7 @@
 								</div>
 								<div class="col-xl-3 col-6 header-top_w3layouts">
 									<p class="text-da">
-										<span class="fa fa-phone mr-2"></span>+234 817 941 7107
+										<span class="fa fa-phone mr-2"></span>+234 703 638 3751
 									</p>
 								</div>
 								<div class="col-xl-6"></div>
@@ -222,7 +222,7 @@
 	<div class="team py-5" id="chefs">
 		<div class="container-fluid py-xl-5 py-lg-3">
 			<div class="title-section text-center mb-md-5 mb-4">
-				<h3 class="w3ls-title mb-3">Our <span>Chef</span></h3>
+				<h3 class="w3ls-title mb-3">Chief <span>Chef</span></h3>
 				<p class="titile-para-text mx-auto"></p>
 			</div>
 			<div class="row team-bottom pt-4">
@@ -370,8 +370,8 @@
                         <h3>Contact Us</h3>
                     </div>
                     <div class="footer-text mt-4">
-                        <p class="my-2">Phone : +234 817 941 7107</p>
-                        <p>Email : activekitchen.food@gmail.com</p>
+                        <p class="my-2">Phone : +234 703 638 3751</p>
+                        <p>Email :olatunjimoses081@gmail.com</p>
                     </div>
                 </div>
                 <div style="padding: 0%" class="col-lg-4 footer-grid_section_1its">
