--- a/contact.html
+++ b/contact.html
@@ -55,7 +55,7 @@
 								</div>
 								<div class="col-xl-3 col-6 header-top_w3layouts">
 									<p class="text-da">
-										<span class="fa fa-phone mr-2"></span>+234 817 941 7107
+										<span class="fa fa-phone mr-2"></span>+234 703 638 3751
 									</p>
 								</div>
 								<div class="col-xl-6"></div>
@@ -156,7 +156,7 @@
 						</div>
 						<div class="col-9 address-right mt-2">
 							<h5 class="address mb-2">Phone</h5>
-							<p>+234 817 941 7107</p>
+							<p>+234 703 638 3751</p>
 						</div>
 					</div>
 					<div class="row address-info-w3ls my-2">
@@ -166,7 +166,7 @@
 						<div class="col-9 address-right mt-2">
 							<h5 class="address mb-2">Email</h5>
 							<p>
-								<a href="mailto:example@email.com">  activekitchen.food@gmail.com</a>
+								<a href="mailto:example@email.com">  olatunjimoses081@gmail.com</a>
 							</p>
 						</div>
 					</div>
@@ -254,8 +254,8 @@
                         <h3>Contact Us</h3>
                     </div>
                     <div class="footer-text mt-4">
-                        <p class="my-2">Phone : +234 817 941 7107</p>
-                        <p>Email : activekitchen.food@gmail.com</p>
+                        <p class="my-2">Phone : +234 703 638 3751</p>
+                        <p>Email : olatunjimoses081@gmail.com</p>
                     </div>
                 </div>
                 <div style="padding: 0%" class="col-lg-4 footer-grid_section_1its">
