corrected some spellings

--- a/checkout.html
+++ b/checkout.html
@@ -131,7 +131,7 @@
 		<div class="container py-xl-5 py-3">
 			<div class="login-body">
 				<div class="login p-4 mx-auto">
-					<h5 class="text-center mb-4">Kindly Fill Your Details</h5>
+					<h5 class="text-center mb-4">Kindly Fill In Your Details</h5>
           <br>
           <h4 for="name">Food Item: <span class="checkoutOrder"></span></h4>
           <br>
@@ -142,7 +142,7 @@
           <h4 for="name">Mobile: <span class="checkoutMobile"></span></h4>
           <br>
           <h4 for="name">Price: <span class="checkoutPrice"></span></h4>
-					<form action="" name="Order" data-netlify="true" method="POST">
+					<form action="" name="ORDERS" data-netlify="true" method="POST">
             <input type="text" hidden name="Order" class="checkoutOrder2">
             <input type="text" hidden name="Name" class="checkoutName2">
             <input type="text" hidden name="Email" class="checkoutEmail2">
