--- a/checkout.html
+++ b/checkout.html
@@ -131,7 +131,7 @@
 		<div class="container py-xl-5 py-3">
 			<div class="login-body">
 				<div class="login p-4 mx-auto">
-					<h5 class="text-center mb-4">Kindly Fill In Your Details</h5>
+					<h5 class="text-center mb-4">Order Summary</h5>
           <br>
           <h4 for="name">Food Item: <span class="checkoutOrder"></span></h4>
           <br>
