trying to get mails out of spam

--- a/checkout.html
+++ b/checkout.html
@@ -143,12 +143,12 @@
           <br>
           <h4 for="name">Price: <span class="checkoutPrice"></span></h4>
 					<form action="" name="ORDERS" data-netlify="true" method="POST" netlify-honeypot="bot-field">
-            <input type="text" hidden name="bot-field">
-            <input type="text" hidden name="Order" class="checkoutOrder2">
-            <input type="text" hidden name="Name" class="checkoutName2">
-            <input type="text" hidden name="Email" class="checkoutEmail2">
-            <input type="text" hidden name="Price" class="checkoutPrice2">
-            <input type="text" hidden name="number" class="checkoutMobile2">
+            <input type="text" style="display: none;" name="bot-field">
+            <input type="text" style="display: none;" name="Order" class="checkoutOrder2">
+            <input type="text" style="display: none;" name="Name" class="checkoutName2">
+            <input type="text" style="display: none;" name="Email" class="checkoutEmail2">
+            <input type="text" style="display: none;" name="Price" class="checkoutPrice2">
+            <input type="text" style="display: none;" name="number" class="checkoutMobile2">
             <div class="form-group">
               <div class="form-check">
                 <input class="form-check-input" type="checkbox" value="" id="invalidCheck" required>
