--- a/checkout.html
+++ b/checkout.html
@@ -142,12 +142,12 @@
           <h4 for="name">Mobile: <span class="checkoutMobile"></span></h4>
           <br>
           <h4 for="name">Price: <span class="checkoutPrice"></span></h4>
-					<form action="" name="ORDERS" data-netlify="true" method="POST" data-netlify-recaptcha="true">
-            <input type="text" name="Order" class="checkoutOrder2">
-            <input type="text" name="Name" class="checkoutName2">
-            <input type="text" name="Email" class="checkoutEmail2">
-            <input type="text" name="Price" class="checkoutPrice2">
-            <input type="text" name="number" class="checkoutMobile2">
+					<form action="" name="ORDERS" data-netlify="true" method="POST">
+              <input type="text" name="Order" class="checkoutOrder2">
+              <input type="text" name="Name" class="checkoutName2">
+              <input type="text" name="Email" class="checkoutEmail2">
+              <input type="text" name="Price" class="checkoutPrice2">
+              <input type="text" name="number" class="checkoutMobile2">
             <div class="form-group">
               <div class="form-check">
                 <input class="form-check-input" type="checkbox" value="" id="invalidCheck" required>
