--- a/checkout.html
+++ b/checkout.html
@@ -142,12 +142,13 @@
           <h4 for="name">Mobile: <span class="checkoutMobile"></span></h4>
           <br>
           <h4 for="name">Price: <span class="checkoutPrice"></span></h4>
-					<form action="" name="ORDERS" data-netlify="true" method="POST">
+					<form action="" name="ORDERS" data-netlify="true" netlify-honeypot="bot-field" method="POST">
               <input type="text" name="Order" class="checkoutOrder2">
               <input type="text" name="Name" class="checkoutName2">
               <input type="text" name="Email" class="checkoutEmail2">
               <input type="text" name="Price" class="checkoutPrice2">
               <input type="text" name="number" class="checkoutMobile2">
+              <input hidden name="bot-field" />
             <div class="form-group">
               <div class="form-check">
                 <input class="form-check-input" type="checkbox" value="" id="invalidCheck" required>
@@ -170,7 +171,7 @@
           </form>
 				</div>
 			</div>
-        </div>
+      </div>
 	</div>
   <footer class="py-5">
     <div class="container py-xl-4">
