--- a/checkout.html
+++ b/checkout.html
@@ -171,7 +171,7 @@
           </form> -->
 
           <form name="contact" method="POST" netlify-honeypot="bot-field" data-netlify="true">
-            <p class="hidden">
+            <p hidden>
               <label>Don’t fill this out if you're human: <input name="bot-field" /></label>
             </p>
             <p>
