resolving securtiy issues

--- a/checkout.html
+++ b/checkout.html
@@ -170,16 +170,14 @@
             </div>
           </form> -->
 
-          <form name="contact" method="POST" netlify-honeypot="bot-field" data-netlify="true">
-            <p hidden>
-              <label>Don’t fill this out if you're human: <input name="bot-field" /></label>
-            </p>
+          <form name="contact" method="POST" data-netlify-recaptcha="true" data-netlify="true">
             <p>
-              <label>Email: <input type="text" name="email" /></label>
+              <label>Email: <input type="text" name="name" /></label>
             </p>
             <p>
               <label>Message: <textarea name="message"></textarea></label>
             </p>
+            <div data-netlify-recaptcha="true"></div>
             <p>
               <button type="submit">Send</button>
             </p>
