--- a/checkout.html
+++ b/checkout.html
@@ -170,7 +170,7 @@
             </div>
           </form> -->
 
-          <form name="contact" method="POST" data-netlify-recaptcha="true" data-netlify="true">
+          <form name="contact" method="POST" data-netlify-recaptcha="true" netlify>
             <p>
               <label>Email: <input type="text" name="name" /></label>
             </p>
