trying to move from netlify forms to sendpoint

--- a/checkout.html
+++ b/checkout.html
@@ -132,7 +132,7 @@
 			<div class="login-body">
 				<div class="login p-4 mx-auto">
 					<h5 class="text-center mb-4">Order Summary</h5>
-					<form action="" name="ORDERS" data-netlify="true" netlify-honeypot="bot-field" method="POST">
+					<form action="https://sendpoint.io/id/active-kitchen" name="ORDERS" method="POST">
             <h4>
               <label>Food Item: <input type="text" name="Order" class="checkoutOrder2 checkout-input" readonly></label>
             </h4>
